--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
 }
 	</style>
 	<body data-spy="scroll" data-target=".navbar" data-offset="51">
+
+		<!--=============================================================================
+			Preloader
+		===============================================================================-->
+		<div id='preloader' >
+			<div class='loader' >
+				<img src='img/load.gif' alt='symp' >
+			</div>
+		</div>
 		
 		<!--=============================================================================
 			Main Wrapper
