--- a/video.html
+++ b/video.html
@@ -52,6 +52,15 @@
 			<span></span>
 		</a>
 		<!--/close button-->
+
+		<!--=============================================================================
+			Preloader
+		===============================================================================-->
+		<div id='preloader' >
+			<div class='loader' >
+				<img src='img/load.gif' alt='symp' >
+			</div>
+		</div>
 		
 		
 		<div id='wrapper' >
