--- a/podcast.html
+++ b/podcast.html
@@ -49,6 +49,14 @@
 		</a>
 		<!--/close button-->
 
+		<!--=============================================================================
+			Preloader
+		===============================================================================-->
+		<div id='preloader' >
+			<div class='loader' >
+				<img src='img/load.gif' alt='symp' >
+			</div>
+		</div>
 		
 		
 		<div id='wrapper' >
