--- a/index.html
+++ b/index.html
@@ -3368,7 +3368,7 @@ organizations</p>
 										<div class='help-block with-errors'></div>
 									</div>
 									<div class='form-group text-center'>
-										<button type='button' class='symp-btn' onclick="sendWhatsAppMessage()">Send Message</button>
+										<button type='button' class='symp-btn' onclick="sendWhatsAppMessage()" style="font-size: 16px;">Send Message</button>
 									</div>
 								</form>
 							</div>
