--- a/podcast.html
+++ b/podcast.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class='no-js' >
 	
 	<head>
 
 		<meta charset="utf-8">
-		<meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 	
 		<title>Gandari Tri Adifa | Portofolio</title>
 		
@@ -48,15 +48,17 @@
 			<span></span>
 		</a>
 		<!--/close button-->
-
-		<!--=============================================================================
-			Preloader
-		===============================================================================-->
+		
+		
+		<!--preloader-->
 		<div id='preloader' >
+		
 			<div class='loader' >
 				<img src='img/load.gif' alt='symp' >
 			</div>
+			
 		</div>
+		<!--/preloader-->
 		
 		
 		<div id='wrapper' >
